--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "photowall",
-  "homepage": "https://Dvirules.github.io/",
+  "homepage": "https://Dvirules.github.io/DvirsPhotowall",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
